
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int Cmd_AddCommand (char*,int ) ;
 void* Cvar_Get (char*,char*,int ) ;
 int IN_BackDown ;
 int IN_BackUp ;
 int IN_Button0Down ;
 int IN_Button0Up ;
 int IN_Button10Down ;
 int IN_Button10Up ;
 int IN_Button11Down ;
 int IN_Button11Up ;
 int IN_Button12Down ;
 int IN_Button12Up ;
 int IN_Button13Down ;
 int IN_Button13Up ;
 int IN_Button14Down ;
 int IN_Button14Up ;
 int IN_Button1Down ;
 int IN_Button1Up ;
 int IN_Button2Down ;
 int IN_Button2Up ;
 int IN_Button3Down ;
 int IN_Button3Up ;
 int IN_Button4Down ;
 int IN_Button4Up ;
 int IN_Button5Down ;
 int IN_Button5Up ;
 int IN_Button6Down ;
 int IN_Button6Up ;
 int IN_Button7Down ;
 int IN_Button7Up ;
 int IN_Button8Down ;
 int IN_Button8Up ;
 int IN_Button9Down ;
 int IN_Button9Up ;
 int IN_CenterView ;
 int IN_DownDown ;
 int IN_DownUp ;
 int IN_ForwardDown ;
 int IN_ForwardUp ;
 int IN_LeftDown ;
 int IN_LeftUp ;
 int IN_LookdownDown ;
 int IN_LookdownUp ;
 int IN_LookupDown ;
 int IN_LookupUp ;
 int IN_MLookDown ;
 int IN_MLookUp ;
 int IN_MoveleftDown ;
 int IN_MoveleftUp ;
 int IN_MoverightDown ;
 int IN_MoverightUp ;
 int IN_RightDown ;
 int IN_RightUp ;
 int IN_SpeedDown ;
 int IN_SpeedUp ;
 int IN_StrafeDown ;
 int IN_StrafeUp ;
 int IN_UpDown ;
 int IN_UpUp ;
 void* cl_debugMove ;
 void* cl_nodelta ;

void CL_InitInput( void ) {
 Cmd_AddCommand ("centerview",IN_CenterView);

 Cmd_AddCommand ("+moveup",IN_UpDown);
 Cmd_AddCommand ("-moveup",IN_UpUp);
 Cmd_AddCommand ("+movedown",IN_DownDown);
 Cmd_AddCommand ("-movedown",IN_DownUp);
 Cmd_AddCommand ("+left",IN_LeftDown);
 Cmd_AddCommand ("-left",IN_LeftUp);
 Cmd_AddCommand ("+right",IN_RightDown);
 Cmd_AddCommand ("-right",IN_RightUp);
 Cmd_AddCommand ("+forward",IN_ForwardDown);
 Cmd_AddCommand ("-forward",IN_ForwardUp);
 Cmd_AddCommand ("+back",IN_BackDown);
 Cmd_AddCommand ("-back",IN_BackUp);
 Cmd_AddCommand ("+lookup", IN_LookupDown);
 Cmd_AddCommand ("-lookup", IN_LookupUp);
 Cmd_AddCommand ("+lookdown", IN_LookdownDown);
 Cmd_AddCommand ("-lookdown", IN_LookdownUp);
 Cmd_AddCommand ("+strafe", IN_StrafeDown);
 Cmd_AddCommand ("-strafe", IN_StrafeUp);
 Cmd_AddCommand ("+moveleft", IN_MoveleftDown);
 Cmd_AddCommand ("-moveleft", IN_MoveleftUp);
 Cmd_AddCommand ("+moveright", IN_MoverightDown);
 Cmd_AddCommand ("-moveright", IN_MoverightUp);
 Cmd_AddCommand ("+speed", IN_SpeedDown);
 Cmd_AddCommand ("-speed", IN_SpeedUp);
 Cmd_AddCommand ("+attack", IN_Button0Down);
 Cmd_AddCommand ("-attack", IN_Button0Up);
 Cmd_AddCommand ("+button0", IN_Button0Down);
 Cmd_AddCommand ("-button0", IN_Button0Up);
 Cmd_AddCommand ("+button1", IN_Button1Down);
 Cmd_AddCommand ("-button1", IN_Button1Up);
 Cmd_AddCommand ("+button2", IN_Button2Down);
 Cmd_AddCommand ("-button2", IN_Button2Up);
 Cmd_AddCommand ("+button3", IN_Button3Down);
 Cmd_AddCommand ("-button3", IN_Button3Up);
 Cmd_AddCommand ("+button4", IN_Button4Down);
 Cmd_AddCommand ("-button4", IN_Button4Up);
 Cmd_AddCommand ("+button5", IN_Button5Down);
 Cmd_AddCommand ("-button5", IN_Button5Up);
 Cmd_AddCommand ("+button6", IN_Button6Down);
 Cmd_AddCommand ("-button6", IN_Button6Up);
 Cmd_AddCommand ("+button7", IN_Button7Down);
 Cmd_AddCommand ("-button7", IN_Button7Up);
 Cmd_AddCommand ("+button8", IN_Button8Down);
 Cmd_AddCommand ("-button8", IN_Button8Up);
 Cmd_AddCommand ("+button9", IN_Button9Down);
 Cmd_AddCommand ("-button9", IN_Button9Up);
 Cmd_AddCommand ("+button10", IN_Button10Down);
 Cmd_AddCommand ("-button10", IN_Button10Up);
 Cmd_AddCommand ("+button11", IN_Button11Down);
 Cmd_AddCommand ("-button11", IN_Button11Up);
 Cmd_AddCommand ("+button12", IN_Button12Down);
 Cmd_AddCommand ("-button12", IN_Button12Up);
 Cmd_AddCommand ("+button13", IN_Button13Down);
 Cmd_AddCommand ("-button13", IN_Button13Up);
 Cmd_AddCommand ("+button14", IN_Button14Down);
 Cmd_AddCommand ("-button14", IN_Button14Up);
 Cmd_AddCommand ("+mlook", IN_MLookDown);
 Cmd_AddCommand ("-mlook", IN_MLookUp);

 cl_nodelta = Cvar_Get ("cl_nodelta", "0", 0);
 cl_debugMove = Cvar_Get ("cl_debugMove", "0", 0);
}
